--- a/homework/homework13.html
+++ b/homework/homework13.html
@@ -18,10 +18,8 @@
 
          <!-- Вариант 1-->
          <script type="text/javascript">
-           var fruits = ["апельсин", "банан", "груша"];
-           for (let i = 0;i !== 3 ;i++) {
-             document.writeln(fruits[i]);
-           }
+           const fruits = ["апельсин", "банан", "груша"];
+           document.writeln(fruits);
            fruits.push("яблоко");
            fruits.push("ананас");
            fruits.unshift("грейпфрут");
