--- a/homework/homework14.html
+++ b/homework/homework14.html
@@ -14,7 +14,7 @@
 
 У Вас есть массив, про который заранее известно, что в нем точно больше одного элемента.
 Но сколько именно - неизвестно. Пусть это будет такой массив с фруктами:
-var fruits = ["яблоко", "апельсин", "груша", "гранат"];
+var fruits =
 Напомню, что по условиям Вы не знаете сколько точно в нем элементов, их может быть и 100  и 200.
 Ваша задача состоит в том, чтобы с помощью метода splice заменить в массиве
 предпоследний фрукт на "ананас" и вывести весь массив на экран.
@@ -27,10 +27,21 @@ var fruits = ["банан", "мандарин", "манго"];
 
          <!-- Вариант 1-->
         <script type="text/javascript">
-        var fruits = ["банан", "мандарин", "манго"];
-        let i = fruits.length - 2;
-        delete fruits[i];
-        alert(fruits);
+        "use strict";
+        const fruits = ["яблоко", "апельсин", "груша", "гранат"];
+
+        //способ 1
+
+        const newFruits = fruits.slice();
+        newFruits.splice(-2,1,"ананас");
+        alert(newFruits);
+
+        // способ 2
+
+        const newFruits2 = fruits.concat();
+        newFruits2.splice(-2,1,"ананас");
+        alert(newFruits2);
+        console.log(fruits); // исходный массив остался неизменённым
         </script>
     </div>
 </body>
