--- a/homework/homework17.html
+++ b/homework/homework17.html
@@ -20,13 +20,9 @@ var students = ["Абаканов Сергей", "Гагарин Матвей", 
 А иначе, выведите на экран сообщение о том, что это маленький массив, в  котором менее 3-х элементов.
 */
         </script>
-        <script type="text/javascript">
-        var students = ["Абаканов Сергей", "Гагарин Матвей", "Хантухова Лейла", "Алалина Алина",  "Сакуров Иоган"];
-        if (students.length > 3) {
-          alert("Это большой массив, в котором как минимум 3 элемента");
-        } else {
-          alert("Это маленький массив, в котором менее 3-х элементов");
-        }
+        <script type="text/javascript" src="./js/homework17.js
+        ">
+
         </script>
     </div>
 </body>
