--- a/homework/homework22.html
+++ b/homework/homework22.html
@@ -21,9 +21,9 @@
   // Цикл while + массив
   </script>
   <script type="text/javascript">
-  students2 = ['Абаканов Сергей', 'Алалина Алина', 'Гагарин Матвей', 'Хантухова Лейла', 'Викторов Сергей',  'Масалкин Андрей', 'Петравкин Алексей', 'Московин Павел', 'Данилов Станислав'];
-  let i = 0;
-  while (i !== students2.length){
+  const students2 = ['Абаканов Сергей', 'Алалина Алина', 'Гагарин Матвей', 'Хантухова Лейла', 'Викторов Сергей',  'Масалкин Андрей', 'Петравкин Алексей', 'Московин Павел', 'Данилов Станислав'];
+  let i = 2;
+  while (i < 7){
     document.writeln(students2[i]);
     i++;
   }
