--- a/homework/homework29.html
+++ b/homework/homework29.html
@@ -30,14 +30,14 @@
 Попробуйте на время убрать метод toLowerCase() из скрипта и посмотрите, что произойдет.*/
         </script>
         <script type="text/javascript">
-          var fruit = "апельсин";
-          let answer = prompt("Че по фруктекам любишь?", 'яблоко');
+          const fruit = "апельсин";
+          let answer = prompt("Че по фруктекам любишь?", 'Яблоко');
           if (fruit === answer.toLowerCase()) {
-            alert("нихуя ты баклажан");
+            alert("Красавчик.");
           } else {
-          alert("кручу верчу, запутать хочу");
+          alert("Почти красавчик.");
         }
         </script>
-    </div
+    </div>
 </body>
 </html>
