--- a/homework/homework30.html
+++ b/homework/homework30.html
@@ -33,9 +33,9 @@ var mySite = "http://ruseller.com";
           let mySite = prompt("Напишите адрес любого сайта", 'https://google.com');
           function indexOf(mySite) {
             if (mySite.indexOf("https://") !== -1) {
-              document.write("В названии сайта есть протокол https://");
+              document.write("В адрессе сайта есть протокол https://");
             } else {
-              document.write("В названии сайте нет протокола https://");
+              document.write("В адрессе сайте нет протокола https://");
             }
           }
           indexOf(mySite);
