--- a/homework/homework34.html
+++ b/homework/homework34.html
@@ -29,7 +29,9 @@
           function searchForNumbers(forTesting) {
               if (forTesting.search(regular) === 0) {
               document.write("Переменная начинается с цифры");
-              }
+            } else {
+              document.write("Переменная начинается не с цифры");
+            }
             }
           searchForNumbers(forTesting);
         </script>
