--- a/homework/homework38.html
+++ b/homework/homework38.html
@@ -25,9 +25,9 @@
           var randSimbol = ["Молоко", 77, 11, "Мед", -88];
           function NotANumber(str) {
             if (isNaN(str) === false) {
-              document.writeln(str," - это число");
+              document.writeln(str," это число<br>");
             } else if (isNaN(str) === true) {
-              document.writeln(str," - это не число");
+              document.writeln(str," это не число<br>");
             }
           }
           for (let i = 0; i < randSimbol.length; i++){
