--- a/homework/homework40.html
+++ b/homework/homework40.html
@@ -24,7 +24,7 @@
 
         </script>
         <script type="text/javascript">
-          var myArray = ["100 попугаев", "201 рубль", "624 доллара", "109 кроликов", "33 весельчака", "62 кабана"];
+          const myArray = ["100 попугаев", "201 рубль", "624 доллара", "109 кроликов", "33 весельчака", "62 кабана"];
           console.log(parseInt("100 попугаев"));
           function Parse(myArray) {
             for (let i = 0; i < myArray.length; i++){
