--- a/homework/homework44-1.html
+++ b/homework/homework44-1.html
@@ -23,7 +23,7 @@
 
         </script>
         <script type="text/javascript">
-        var now = new Date();
+        const now = new Date();
           document.writeln(now.getHours());
           if (now.getMinutes() < 10) {
             document.writeln("0",now.getMinutes());
