--- a/homework/homework44-2.html
+++ b/homework/homework44-2.html
@@ -47,11 +47,9 @@
 
         </script>
         <script type="text/javascript">
-          var now = new Date();
-          var week = [ "Воскресенье", "Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота"];
-          var Day = now.getDay();
-          console.log(Day);
-          console.log(week[Day]);
+          const now = new Date();
+          const week = [ "Воскресенье", "Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота"];
+          const Day = now.getDay();
           document.write("Сегодня - ", week[Day]);
         </script>
     </div>
