--- a/homework/homework45.html
+++ b/homework/homework45.html
@@ -47,10 +47,10 @@
             future.setDate(future.getDate() + n);
             console.log(future);
             document.writeln("Через ", n, " дней будет вот такая дата:");
-            document.writeln("День недели: ", week[(future.getDay())]);
-            document.writeln("Число: ", future.getDate());
-            document.writeln("Месяц: ",month[future.getMonth()]);
-            document.writeln("Год: ", future.getFullYear());
+            document.writeln("<br>День недели: ", week[(future.getDay())]);
+            document.writeln("<br>Число: ", future.getDate());
+            document.writeln("<br>Месяц: ",month[future.getMonth()]);
+            document.writeln("<br>Год: ", future.getFullYear());
           }
           bred(n);
         </script>
