--- a/homework/homework23.html
+++ b/homework/homework23.html
@@ -30,7 +30,7 @@
   </script>
   <script type="text/javascript">
   square = (i) => i ** 2;
-  var i = 1;
+  let i = 1;
   while (i < 8) {
     document.writeln(square(i),';');
     i++;
@@ -39,9 +39,7 @@
   <p>Вариант через цикл for</p>
   <script type="text/javascript">
 
-  square = (i) => i ** 2;
-  for (let i = 1; i !== 8; i++){
-
+  for (let i = 1; i < 8; i++) {
     document.writeln(square(i));
   }
   </script>
