--- a/homework/homework25-1.html
+++ b/homework/homework25-1.html
@@ -18,10 +18,13 @@
         </script>
         <script type="text/javascript">
           function square(num) {
-            num = num ** 2;
-            return num;
+            return num = num ** 2;
           }
           console.log(square(3));
+
+          //стрелочная функция
+          const sqr = (num) => num ** 2;
+          console.log(sqr(3));
         </script>
     </div>
 </body>
