--- a/homework/homework27.html
+++ b/homework/homework27.html
@@ -22,7 +22,7 @@
             let name = prompt("Введите Ваше имя", '');
             let secondName = prompt("Теперь введите Вашу фамилию", '');
             let thirdName = prompt("Наконец, введите Ваше отчество!", '');
-            const fio = "Пошли бы Вы, " + secondName + ' ' + name + " " + thirdName;
+            const fio = secondName + ' ' + name + " " + thirdName;
             return fio;
           }
           document.write(fio());
