--- a/homework/homework31.html
+++ b/homework/homework31.html
@@ -19,14 +19,14 @@
 */
         </script>
         <script type="text/javascript">
-        var myStr = "Хороший вечер";
+        const myStr = "Хороший вечер.";
         let start = 0;
         for (let i = 0; i < myStr.length; i++) {
           if (myStr[i] === " ") {
-            start = i;
+            start = i + 1;
           }
         }
-        let day = myStr.slice(start, myStr.length);
+        let day = myStr.slice(start);
         document.write(day);
 
         </script>
