--- a/homework/homework41.html
+++ b/homework/homework41.html
@@ -25,11 +25,10 @@
             */
         </script>
         <script type="text/javascript">
-          var randSimbol = [10.5, 15, 112, 77.6];
+          const randSimbol = [10.5, 15, 112, 77.6];
           function Fixed(randSimbol) {
             for (let i = 0; i < randSimbol.length; i++) {
-              let fix = randSimbol[i];
-              randSimbol[i] = fix.toFixed(2);
+              randSimbol[i] = randSimbol[i].toFixed(2);
             }
             document.write(randSimbol);
           }
